--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,17 +1,1 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.datasource.url=jdbc:h2:mem:testdb  
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.driver-class-name=org.h2.Driver
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
-
-# MySQL
-#spring.datasource.url=jdbc:mysql://localhost:3306/eventosapp
-#spring.datasource.username=root
-#spring.datasource.password=
-#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-#spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.profiles.active=test
