--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.profiles.active=test
+
+#email proprieties
+default-sender =carlosmacaneta@hotmail.com
+default-recipient =carlosmacaneta95@gmail.com 
