--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 #
 spring.mail.host=smtp.gmail.com
 spring.mail.username=carlosmacaneta95
-spring.mail.password=macanetac
+spring.mail.password=
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
