--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -6,8 +6,8 @@ spring.jpa.properties.hibernate.format_sql=false
 
 #Email 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=carlosmacaneta@hotmail.com
-spring.mail.password=
+spring.mail.username=seu email
+spring.mail.password=sua senha
 spring.mail.properties.mail.smtp.auth = true
 spring.mail.properties.mail.smtp.socketFactory.port = 465
 spring.mail.properties.mail.smtp.socketFactory.class = javax.net.ssl.SSLSocketFactory
