Implementando autenticacao e geracao do token JWT

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,6 @@ spring.profiles.active=test
 #email proprieties
 default-sender =carlosmacaneta@hotmail.com
 default-recipient =carlosmacaneta95@gmail.com 
+
+jwt.secret = SequenciaDeCaracteresParaAssinarTokens 
+jwt.expiration = 60000
