--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,9 @@ default-sender =carlosmacaneta@hotmail.com
 default-recipient =carlosmacaneta95@gmail.com 
 
 jwt.secret = SequenciaDeCaracteresParaAssinarTokens 
-jwt.expiration = 60000
+jwt.expiration = 86400000
+
+aws.access_key_id=seu id
+aws.secret_access_key=sua chave
+s3.bucket=cm-spring-ionic
+s3.region=sa-east-1
