Enviando imagens via endpoint

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ default-recipient =carlosmacaneta95@gmail.com
 jwt.secret = SequenciaDeCaracteresParaAssinarTokens 
 jwt.expiration = 86400000
 
-aws.access_key_id=seu id
-aws.secret_access_key=sua chave
+aws.access_key_id=
+aws.secret_access_key=
 s3.bucket=cm-spring-ionic
 s3.region=sa-east-1
