--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,11 @@ default-recipient =carlosmacaneta95@gmail.com
 jwt.secret = SequenciaDeCaracteresParaAssinarTokens 
 jwt.expiration = 86400000
 
+#AMAZON S3 STORAGE
 aws.access_key_id=
 aws.secret_access_key=
 s3.bucket=cm-spring-ionic
 s3.region=sa-east-1
+
+#IMAGE PREFIX
+img.prefix.client.profile=cp
