Endpoint para buscar cliente por email

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,6 +15,7 @@ s3.region=sa-east-1
 
 #IMAGE PREFIX
 img.prefix.client.profile=cp
-
+img.prefix.product=prod
+img.prefix.category = cat
 #IMAGE_DIMENSIONS
 img.profile.size=200
