--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ img.prefix.product=prod
 img.prefix.category = cat
 #IMAGE_DIMENSIONS
 img.profile.size=200
+
+#Aumentando tamanho de upload de arquivo
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
